fix: fix visible status response

--- a/src/components/Docs/Docs.module.scss
+++ b/src/components/Docs/Docs.module.scss
@@ -13,7 +13,7 @@
   overflow-y: auto;
   overflow-x: auto;
   top: 0px;
-  z-index: 1;
+  z-index: 2;
 }
 
 /* Firefox */
