--- a/src/components/GraphPlayground/GraphPlayground.module.scss
+++ b/src/components/GraphPlayground/GraphPlayground.module.scss
@@ -196,7 +196,7 @@
   padding: 5px;
   border-radius: 0.5rem;
   background-color: var(--success-color);
-  z-index: 20;
+  z-index: 1;
 }
 
 .incorrect {
